--- a/index.ipynb
+++ b/index.ipynb
@@ -7,16 +7,16 @@
    "outputs": [],
    "source": [
     "#hide\n",
-    "from your_lib.core import *"
+    "#from your_lib.core import *"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Project name here\n",
+    "# TRR 265\n",
     "\n",
-    "> Summary description here."
+    "> This project handles the analysis of the TRR 265 data."
    ]
   },
   {
@@ -90,5 +90,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
