added branch to settings.ini

--- a/index.ipynb
+++ b/index.ipynb
@@ -16,7 +16,7 @@
    "source": [
     "# TRR 265\n",
     "\n",
-    "> This project handles the analysis of the TRR 265 data."
+    "> This project handles the analysis of the TRR 265 data..."
    ]
   },
   {
