--- a/notebooks/01_data_provider.ipynb
+++ b/notebooks/01_data_provider.ipynb
@@ -958,7 +958,7 @@
    "metadata": {},
    "source": [
     "#### Structure of two-day data\n",
-    "> Note that sampling days run further than 365.  This should not be the case."
+    "> Warning: Note that sampling days run further than 365.  This should not be the case."
    ]
   },
   {
