--- a/notebooks/index.ipynb
+++ b/notebooks/index.ipynb
@@ -37,7 +37,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "`pip install your_project_name`"
+    "`pip install trr265` (not implemented yet)"
    ]
   },
   {
@@ -61,8 +61,349 @@
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>mov_index</th>\n",
+       "      <th>participant</th>\n",
+       "      <th>starting_date</th>\n",
+       "      <th>date</th>\n",
+       "      <th>sampling_day</th>\n",
+       "      <th>MDBF_zufrieden</th>\n",
+       "      <th>MDBF_ruhig</th>\n",
+       "      <th>MDBF_wohl</th>\n",
+       "      <th>MDBF_entspannt</th>\n",
+       "      <th>soziale_isolation</th>\n",
+       "      <th>alternative_rewards</th>\n",
+       "      <th>craving</th>\n",
+       "      <th>limit</th>\n",
+       "      <th>control</th>\n",
+       "      <th>drinks</th>\n",
+       "      <th>g_alc</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>two_day_index</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>b001</td>\n",
+       "      <td>2020-02-24</td>\n",
+       "      <td>2020-02-22</td>\n",
+       "      <td>1</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>{'AnzahlFlascheWeisswein': None, 'AnzahlFlasch...</td>\n",
+       "      <td>6.4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>b001</td>\n",
+       "      <td>2020-02-24</td>\n",
+       "      <td>2020-02-23</td>\n",
+       "      <td>2</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>{'AnzahlFlascheWeisswein': 0.0, 'AnzahlFlasche...</td>\n",
+       "      <td>35.2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>6.0</td>\n",
+       "      <td>b001</td>\n",
+       "      <td>2020-02-24</td>\n",
+       "      <td>2020-02-24</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>None</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>b001</td>\n",
+       "      <td>2020-02-24</td>\n",
+       "      <td>2020-02-25</td>\n",
+       "      <td>4</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>None</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>b001</td>\n",
+       "      <td>2020-02-24</td>\n",
+       "      <td>2020-02-26</td>\n",
+       "      <td>5</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>None</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>139779</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>m234</td>\n",
+       "      <td>2021-08-16</td>\n",
+       "      <td>2022-08-12</td>\n",
+       "      <td>364</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>None</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>139780</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>m234</td>\n",
+       "      <td>2021-08-16</td>\n",
+       "      <td>2022-08-13</td>\n",
+       "      <td>365</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>None</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>139781</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>m234</td>\n",
+       "      <td>2021-08-16</td>\n",
+       "      <td>2022-08-14</td>\n",
+       "      <td>366</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>None</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>139782</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>m234</td>\n",
+       "      <td>2021-08-16</td>\n",
+       "      <td>2022-08-15</td>\n",
+       "      <td>367</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>None</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>139783</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>m234</td>\n",
+       "      <td>2021-08-16</td>\n",
+       "      <td>2022-08-16</td>\n",
+       "      <td>368</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>None</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>139784 rows × 16 columns</p>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "2"
+       "               mov_index participant starting_date       date  sampling_day  \\\n",
+       "two_day_index                                                                 \n",
+       "0                    NaN        b001    2020-02-24 2020-02-22             1   \n",
+       "1                    NaN        b001    2020-02-24 2020-02-23             2   \n",
+       "2                    6.0        b001    2020-02-24 2020-02-24             3   \n",
+       "3                    NaN        b001    2020-02-24 2020-02-25             4   \n",
+       "4                    NaN        b001    2020-02-24 2020-02-26             5   \n",
+       "...                  ...         ...           ...        ...           ...   \n",
+       "139779               NaN        m234    2021-08-16 2022-08-12           364   \n",
+       "139780               NaN        m234    2021-08-16 2022-08-13           365   \n",
+       "139781               NaN        m234    2021-08-16 2022-08-14           366   \n",
+       "139782               NaN        m234    2021-08-16 2022-08-15           367   \n",
+       "139783               NaN        m234    2021-08-16 2022-08-16           368   \n",
+       "\n",
+       "               MDBF_zufrieden  MDBF_ruhig  MDBF_wohl  MDBF_entspannt  \\\n",
+       "two_day_index                                                          \n",
+       "0                         NaN         NaN        NaN             NaN   \n",
+       "1                         NaN         NaN        NaN             NaN   \n",
+       "2                         2.0         6.0        7.0             1.0   \n",
+       "3                         NaN         NaN        NaN             NaN   \n",
+       "4                         NaN         NaN        NaN             NaN   \n",
+       "...                       ...         ...        ...             ...   \n",
+       "139779                    NaN         NaN        NaN             NaN   \n",
+       "139780                    NaN         NaN        NaN             NaN   \n",
+       "139781                    NaN         NaN        NaN             NaN   \n",
+       "139782                    NaN         NaN        NaN             NaN   \n",
+       "139783                    NaN         NaN        NaN             NaN   \n",
+       "\n",
+       "               soziale_isolation  alternative_rewards  craving  limit  \\\n",
+       "two_day_index                                                           \n",
+       "0                            NaN                  NaN      NaN    NaN   \n",
+       "1                            NaN                  NaN      NaN    NaN   \n",
+       "2                            1.0                  4.0      1.0    NaN   \n",
+       "3                            NaN                  NaN      NaN    NaN   \n",
+       "4                            NaN                  NaN      NaN    NaN   \n",
+       "...                          ...                  ...      ...    ...   \n",
+       "139779                       NaN                  NaN      NaN    NaN   \n",
+       "139780                       NaN                  NaN      NaN    NaN   \n",
+       "139781                       NaN                  NaN      NaN    NaN   \n",
+       "139782                       NaN                  NaN      NaN    NaN   \n",
+       "139783                       NaN                  NaN      NaN    NaN   \n",
+       "\n",
+       "               control                                             drinks  \\\n",
+       "two_day_index                                                               \n",
+       "0                  NaN  {'AnzahlFlascheWeisswein': None, 'AnzahlFlasch...   \n",
+       "1                  NaN  {'AnzahlFlascheWeisswein': 0.0, 'AnzahlFlasche...   \n",
+       "2                  NaN                                               None   \n",
+       "3                  NaN                                               None   \n",
+       "4                  NaN                                               None   \n",
+       "...                ...                                                ...   \n",
+       "139779             NaN                                               None   \n",
+       "139780             NaN                                               None   \n",
+       "139781             NaN                                               None   \n",
+       "139782             NaN                                               None   \n",
+       "139783             NaN                                               None   \n",
+       "\n",
+       "               g_alc  \n",
+       "two_day_index         \n",
+       "0                6.4  \n",
+       "1               35.2  \n",
+       "2                NaN  \n",
+       "3                NaN  \n",
+       "4                NaN  \n",
+       "...              ...  \n",
+       "139779           NaN  \n",
+       "139780           NaN  \n",
+       "139781           NaN  \n",
+       "139782           NaN  \n",
+       "139783           NaN  \n",
+       "\n",
+       "[139784 rows x 16 columns]"
       ]
      },
      "execution_count": null,
@@ -71,7 +412,9 @@
     }
    ],
    "source": [
-    "1+1"
+    "import trr265\n",
+    "from trr265 import data_provider as dp\n",
+    "dp.get_two_day_data()"
    ]
   },
   {
