Refactored dataprovider into class.

--- a/notebooks/index.ipynb
+++ b/notebooks/index.ipynb
@@ -6,8 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#hide\n",
-    "#from your_lib.core import *"
+    "#hide"
    ]
   },
   {
@@ -16,14 +15,14 @@
    "source": [
     "# TRR 265\n",
     "\n",
-    "> This project handles the analysis of the TRR 265 data..."
+    "> This module handle's analysis of the TRR265 data."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This file will become your README and also the index of your documentation."
+    "stub: To get started, download all the required data. Into the following folder structures:"
    ]
   },
   {
@@ -37,7 +36,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "`pip install trr265` (not implemented yet)"
+    "`pip install trr265`"
    ]
   },
   {
@@ -55,374 +54,34 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>mov_index</th>\n",
-       "      <th>participant</th>\n",
-       "      <th>starting_date</th>\n",
-       "      <th>date</th>\n",
-       "      <th>sampling_day</th>\n",
-       "      <th>MDBF_zufrieden</th>\n",
-       "      <th>MDBF_ruhig</th>\n",
-       "      <th>MDBF_wohl</th>\n",
-       "      <th>MDBF_entspannt</th>\n",
-       "      <th>soziale_isolation</th>\n",
-       "      <th>alternative_rewards</th>\n",
-       "      <th>craving</th>\n",
-       "      <th>limit</th>\n",
-       "      <th>control</th>\n",
-       "      <th>drinks</th>\n",
-       "      <th>g_alc</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>two_day_index</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>b001</td>\n",
-       "      <td>2020-02-24</td>\n",
-       "      <td>2020-02-22</td>\n",
-       "      <td>1</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>{'AnzahlFlascheWeisswein': None, 'AnzahlFlasch...</td>\n",
-       "      <td>6.4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>b001</td>\n",
-       "      <td>2020-02-24</td>\n",
-       "      <td>2020-02-23</td>\n",
-       "      <td>2</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>{'AnzahlFlascheWeisswein': 0.0, 'AnzahlFlasche...</td>\n",
-       "      <td>35.2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>6.0</td>\n",
-       "      <td>b001</td>\n",
-       "      <td>2020-02-24</td>\n",
-       "      <td>2020-02-24</td>\n",
-       "      <td>3</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>6.0</td>\n",
-       "      <td>7.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>None</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>b001</td>\n",
-       "      <td>2020-02-24</td>\n",
-       "      <td>2020-02-25</td>\n",
-       "      <td>4</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>None</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>b001</td>\n",
-       "      <td>2020-02-24</td>\n",
-       "      <td>2020-02-26</td>\n",
-       "      <td>5</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>None</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>139779</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>m234</td>\n",
-       "      <td>2021-08-16</td>\n",
-       "      <td>2022-08-12</td>\n",
-       "      <td>364</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>None</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>139780</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>m234</td>\n",
-       "      <td>2021-08-16</td>\n",
-       "      <td>2022-08-13</td>\n",
-       "      <td>365</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>None</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>139781</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>m234</td>\n",
-       "      <td>2021-08-16</td>\n",
-       "      <td>2022-08-14</td>\n",
-       "      <td>366</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>None</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>139782</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>m234</td>\n",
-       "      <td>2021-08-16</td>\n",
-       "      <td>2022-08-15</td>\n",
-       "      <td>367</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>None</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>139783</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>m234</td>\n",
-       "      <td>2021-08-16</td>\n",
-       "      <td>2022-08-16</td>\n",
-       "      <td>368</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>None</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>139784 rows × 16 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "               mov_index participant starting_date       date  sampling_day  \\\n",
-       "two_day_index                                                                 \n",
-       "0                    NaN        b001    2020-02-24 2020-02-22             1   \n",
-       "1                    NaN        b001    2020-02-24 2020-02-23             2   \n",
-       "2                    6.0        b001    2020-02-24 2020-02-24             3   \n",
-       "3                    NaN        b001    2020-02-24 2020-02-25             4   \n",
-       "4                    NaN        b001    2020-02-24 2020-02-26             5   \n",
-       "...                  ...         ...           ...        ...           ...   \n",
-       "139779               NaN        m234    2021-08-16 2022-08-12           364   \n",
-       "139780               NaN        m234    2021-08-16 2022-08-13           365   \n",
-       "139781               NaN        m234    2021-08-16 2022-08-14           366   \n",
-       "139782               NaN        m234    2021-08-16 2022-08-15           367   \n",
-       "139783               NaN        m234    2021-08-16 2022-08-16           368   \n",
-       "\n",
-       "               MDBF_zufrieden  MDBF_ruhig  MDBF_wohl  MDBF_entspannt  \\\n",
-       "two_day_index                                                          \n",
-       "0                         NaN         NaN        NaN             NaN   \n",
-       "1                         NaN         NaN        NaN             NaN   \n",
-       "2                         2.0         6.0        7.0             1.0   \n",
-       "3                         NaN         NaN        NaN             NaN   \n",
-       "4                         NaN         NaN        NaN             NaN   \n",
-       "...                       ...         ...        ...             ...   \n",
-       "139779                    NaN         NaN        NaN             NaN   \n",
-       "139780                    NaN         NaN        NaN             NaN   \n",
-       "139781                    NaN         NaN        NaN             NaN   \n",
-       "139782                    NaN         NaN        NaN             NaN   \n",
-       "139783                    NaN         NaN        NaN             NaN   \n",
-       "\n",
-       "               soziale_isolation  alternative_rewards  craving  limit  \\\n",
-       "two_day_index                                                           \n",
-       "0                            NaN                  NaN      NaN    NaN   \n",
-       "1                            NaN                  NaN      NaN    NaN   \n",
-       "2                            1.0                  4.0      1.0    NaN   \n",
-       "3                            NaN                  NaN      NaN    NaN   \n",
-       "4                            NaN                  NaN      NaN    NaN   \n",
-       "...                          ...                  ...      ...    ...   \n",
-       "139779                       NaN                  NaN      NaN    NaN   \n",
-       "139780                       NaN                  NaN      NaN    NaN   \n",
-       "139781                       NaN                  NaN      NaN    NaN   \n",
-       "139782                       NaN                  NaN      NaN    NaN   \n",
-       "139783                       NaN                  NaN      NaN    NaN   \n",
-       "\n",
-       "               control                                             drinks  \\\n",
-       "two_day_index                                                               \n",
-       "0                  NaN  {'AnzahlFlascheWeisswein': None, 'AnzahlFlasch...   \n",
-       "1                  NaN  {'AnzahlFlascheWeisswein': 0.0, 'AnzahlFlasche...   \n",
-       "2                  NaN                                               None   \n",
-       "3                  NaN                                               None   \n",
-       "4                  NaN                                               None   \n",
-       "...                ...                                                ...   \n",
-       "139779             NaN                                               None   \n",
-       "139780             NaN                                               None   \n",
-       "139781             NaN                                               None   \n",
-       "139782             NaN                                               None   \n",
-       "139783             NaN                                               None   \n",
-       "\n",
-       "               g_alc  \n",
-       "two_day_index         \n",
-       "0                6.4  \n",
-       "1               35.2  \n",
-       "2                NaN  \n",
-       "3                NaN  \n",
-       "4                NaN  \n",
-       "...              ...  \n",
-       "139779           NaN  \n",
-       "139780           NaN  \n",
-       "139781           NaN  \n",
-       "139782           NaN  \n",
-       "139783           NaN  \n",
-       "\n",
-       "[139784 rows x 16 columns]"
-      ]
-     },
-     "execution_count": null,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "import trr265\n",
-    "from trr265 import data_provider as dp\n",
-    "dp.get_two_day_data()"
+    "!pip install trr265"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'DataProvider' object has no attribute 'get_two_day_data'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m/var/folders/16/2wxbnpk5321f8g40bxf0ht_h0000gn/T/ipykernel_84713/2255965172.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mtrr265\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdata_provider\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mDataProvider\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0mdp\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mDataProvider\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'/Users/hilmarzech/Projects/trr265/trr265/data/'\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;31m# Path to data folder (containing raw, interim, external, and processed)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mdp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_two_day_data\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0miloc\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;36m20\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m: 'DataProvider' object has no attribute 'get_two_day_data'"
+     ]
+    }
+   ],
+   "source": [
+    "from trr265.data_provider import DataProvider\n",
+    "dp = DataProvider('/Users/hilmarzech/Projects/trr265/trr265/data/') # Path to data folder (containing raw, interim, external, and processed)\n",
+    "dp.get_two_day_data().iloc[:20]"
+   ]
   }
  ],
  "metadata": {
